# wsl-relay

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
src/: autostart.rs  clipboard.rs  config.rs  lib.rs  main.rs  notify.rs  tray.rs
src/server/: mod.rs  routes.rs
tests/: autostart_test.rs  clipboard_test.rs  config_test.rs  notify_test.rs  server_test.rs  tray_test.rs
