[package]
name = "wsl-relay"
version = "0.1.0"
edition = "2024"
description = "A secure bridge between WSL2/Docker containers and Windows Host"
license = "MIT OR Apache-2.0"
repository = "https://github.com/khaym/wsl-relay"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "UI_Notifications",
    "Data_Xml_Dom",
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
lto = true
strip = true
opt-level = "z"
